# admin-panel

./: .env.default  Makefile  README.md  pyproject.toml  setup.cfg
frontend/: __main__.py  app.py  config.py  schemas.py
frontend/client/: api.py  roles.py  users.py
frontend/forms/: roles.py  users.py
frontend/templates/: base.html  index.html  navbar.html  role.html  role_table.html  user.html  user_table.html
frontend/views/: index.py  role.py  user.py
