[tool.poetry]
name = "user-role-demo-admin-panel"
version = "0.1.0"
description = ""
authors = ["Pavel Vinnikov <vinnpavel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pydantic = "^1.9.1"
httpx = "^0.23.0"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
bandit = "1.7.2"
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
